# PlotJuggler

./: .gitmodules  CMakeLists.txt
plotter_gui/: mainwindow.cpp
plugins/DataStreamOpenOCD/: CMakeLists.txt  datastream_openocd.cpp  datastream_openocd.h  datastream_openocd.ui  dialog_settings.cpp  dialog_settings.h  dialog_settings.ui  gdbexec.cpp  gdbexec.h  gdbvar.cpp  gdbvar.h  infovar.cpp  infovar.h  openocddialog.cpp  openocddialog.h
plugins/DataStreamOpenOCD/gdb/: GdbExec.java  GdbVar.java  GdbVarDlg.java  InfoVar.java
plugins/DataStreamOpenOCD/gdb/src/: GdbExec.java  GdbVar.java  InfoVar.java
plugins/DataStreamOpenOCD/tests/: tests.pro  tst_gdbexec.cpp
